--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 allprojects {
     group = 'com.strategyobject.substrateclient'
-    version = '0.2.5.5'
+    version = '0.2.5.6-SNAPSHOT'
 
     repositories {
         mavenLocal()
